<resources>
    <string name="app_name" translatable="false">Oqyrman</string>
    <string name="title_library">Library</string>
    <string name="title_discover">Discover</string>
    <string name="title_settings">Settings</string>

    <string name="app_dir" translatable="false">/storage/emulated/0/Oqyrman/</string>
    <string name="app_dir_alter" translatable="false">/sdcard/Oqyrman/</string>

    <string name="language">Language:</string>
    <string name="language_pick">Language pick</string>
    <string name="error">Error: </string>

    <string name="action_refresh_name">Refresh</string>
    <string name="action_search_name">Search</string>
    <string name="action_settings_name">Settings</string>
    <string name="no_data_text">No data</string>
    <string name="change_language">Change</string>

    <string name="settings_faq">Frequently Asked Questions</string>
    <string name="settings_contact">Contact us</string>
    <string name="settings_share">Share application</string>
    <string name="info" translatable="false">oqyrman \n oqyrman.kz \n 2018</string>

    <string name="close">Close</string>

    <string name="faq_first">What is the online library? How society should admit?</string>
    <string name="faq_first_answer">It is clear that all are frightened when they hear the word "online library". But, the time is changing
        for the digital technology age. We all worth to experience this. It is obvious, classical books would never be forgotten. Online library
        helps with time management. Electronic books are available whenever and wherever. This is just the one advantage of electronic books.
        Even, user can download a whole library into his smart phone.</string>

</resources>
