<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="com.example.zhomart.oqyrman.Fragments.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/languageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_language" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="@drawable/content_highlight_back_selector_night_mode" />

        <Button
            android:id="@+id/faq_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center_vertical|start"
            android:text="@string/settings_faq"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/contact_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center_vertical|start"
            android:text="@string/settings_contact"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/share_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center_vertical|start"
            android:text="@string/settings_share"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="@drawable/content_highlight_back_selector_night_mode" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_slab"
        android:padding="20dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>
